added analysis notebook

--- a/curebound/notebooks/phu-diane-data-cleaning.ipynb
+++ b/curebound/notebooks/phu-diane-data-cleaning.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Authors: Phu Dang and Diane Dinh\n",
     "\n",
-    "Purpose: Pedal ROI Data Exploratory Analysis\n",
+    "Purpose: Pedal ROI Data Cleaning\n",
     "\n",
     "Date: 05.06.2023\n",
     "\n",
