--- a/curebound/notebooks/phu-diane-data-cleaning.ipynb
+++ b/curebound/notebooks/phu-diane-data-cleaning.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2808,7 +2808,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2824,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2833,7 +2833,7 @@
        "array(['Initial', 'Progress Report #1'], dtype=object)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2844,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -5614,7 +5614,7 @@
        "8         NaN  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5627,7 +5627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -8383,7 +8383,7 @@
        "9    Complete  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8395,7 +8395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8407,7 +8407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8416,7 +8416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -9773,7 +9773,7 @@
        "9    Complete  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9784,7 +9784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -9803,7 +9803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9888,7 +9888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -11958,7 +11958,7 @@
        "[104 rows x 105 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11969,7 +11969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11999,7 +11999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -12801,7 +12801,7 @@
        "9                                                NaN  Complete  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12812,7 +12812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -12914,7 +12914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -13716,7 +13716,7 @@
        "9                                                NaN  Complete  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13742,7 +13742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -13844,7 +13844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -13855,7 +13855,7 @@
        "Name: Complete, dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13866,7 +13866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -14668,7 +14668,7 @@
        "9                                                NaN      True  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14682,7 +14682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -14702,7 +14702,7 @@
        "Length: 86, dtype: float64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14715,7 +14715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -14724,7 +14724,7 @@
        "(190, 232)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14735,7 +14735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14747,7 +14747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14756,7 +14756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -16097,7 +16097,7 @@
        "8         NaN                 NaN  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16108,7 +16108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16124,7 +16124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -16646,7 +16646,7 @@
        "0         NaN                 NaN  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16657,7 +16657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -16666,7 +16666,7 @@
        "array([nan, 'City of Hope'], dtype=object)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16677,7 +16677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -16694,7 +16694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16703,7 +16703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -16983,7 +16983,7 @@
        "[190 rows x 10 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16994,7 +16994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -17173,7 +17173,7 @@
        "[190 rows x 7 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17193,7 +17193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17206,7 +17206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -18002,7 +18002,7 @@
        "4                  NaN         NaN  "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18021,7 +18021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18083,7 +18083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18092,7 +18092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18101,7 +18101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18162,7 +18162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -18697,7 +18697,7 @@
        "8            NaN                             Zero  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18708,7 +18708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -19504,7 +19504,7 @@
        "4                  NaN         NaN  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19515,7 +19515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19523,11 +19523,11 @@
     "# Caution: examine directory before uncomment/run this cell to prevent duplicate\n",
     "# files or unintentional modifications to files\n",
     "\n",
-    "# wp = os.path.join('interim', '2022_Pedal_ROI.csv')\n",
-    "# roi.to_csv(wp)\n",
+    "wp = os.path.join('interim', '2022_Pedal_ROI.csv')\n",
+    "roi.to_csv(wp)\n",
     "\n",
-    "# wp = os.path.join('interim', '2022_Pedal_Progress_Report.csv')\n",
-    "# prog_r.to_csv(wp)\n"
+    "wp = os.path.join('interim', '2022_Pedal_Progress_Report.csv')\n",
+    "prog_r.to_csv(wp)\n"
    ]
   },
   {
